fix group label line length and spacing

--- a/resources/styles/components/task-step/exercise/group.less
+++ b/resources/styles/components/task-step/exercise/group.less
@@ -5,4 +5,8 @@
     padding-top: 2rem;
     padding-bottom: 0;
   }
+  .task-step-group-label {
+    display: inline-block;
+    margin-left: 8px;
+  }
 }
